[package]
name = "anchor-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP SDK
rmcp = { version = "0.1", features = ["server", "client", "macros", "transport-io"] }


# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana & Anchor
solana-sdk = "3.0.0"
solana-client = "3.1.1"
anchor-client = "0.32.1"
anchor-lang = "0.32.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
walkdir = "2.5"

[dev-dependencies]
tokio-test = "0.4"
